--- a/public/login/index.html
+++ b/public/login/index.html
@@ -46,17 +46,10 @@
 <div class="signup">
 
 <h3 class="createaccount">Create an account</h3>
-<a href="/apiv1/signup" class="signupb">Signup now</a>
+<a href="/signup" class="signupb">Signup now</a>
 
 </div>
-<h3 class="or">OR</h3>
-<br>
 
-
- <button id="google" style="display: flex; align-items: center;">
-    <img src="./google.png" width="15px" height="15px" style="margin-right: 5px;">
-            <span style="margin-left: 8px;">Log in with Google</span>
-          </button>
           
     </div>
 </div>
@@ -65,6 +58,9 @@
 <!--  alert box div           -->
 <div id="alertContainer"></div>
 
-<script type="module" src="./login.js"></script>
+<!---  axios libarary   -->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<script  src="./login.js"></script>
 </body>
 </html>
